# bitmappers-companion

./: .gitignore  Cargo.toml  Makefile  README.md  bitgeom.tex  cartesian_grid.pdf_tex  cartesian_grid_dmr_1.pdf_tex  cartesian_grid_dmr_2.pdf_tex  cartesian_grid_dmr_3.pdf_tex  cartesian_grid_dmr_4.pdf_tex  cartesian_grid_dmr_5.pdf_tex  cite.bib  fig1.pdf_tex  fig2.pdf_tex  line_through_points.pdf_tex  news.xbm  point_line_distance.pdf_tex  xface.xbm
figures/: cartesian_grid.pdf_tex  cartesian_grid_dmr_1.pdf_tex  cartesian_grid_dmr_2.pdf_tex  cartesian_grid_dmr_3.pdf_tex  cartesian_grid_dmr_4.pdf_tex  cartesian_grid_dmr_5.pdf_tex  fig1.pdf_tex  fig2.pdf_tex  fix_png.sh  line_through_points.pdf_tex  minidisc.ps  point_line_distance.pdf_tex
src/: bizcat.xbm.rs  chapter_11.rs  dmr.rs  introduction.rs  lib.rs  me.xbm.rs  news.xbm.rs
testimages/: dmr.xbm
