[package]
name = "bitmappers_geometry"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="introduction"
path="src/introduction.rs"

[[bin]]
name="chapter_1"
path="src/chapter_1.rs"

[[bin]]
name="chapter_11"
path="src/chapter_11.rs"

[dependencies]
minifb = "*"
