[package]
name = "bitmappers_companion"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "*"
rand ="*"
regex = "1"
rust_decimal = { version = "1.18.0" , features = ["maths", ]}
